...

- (void)onClick:(UITapGestureRecognizer *)gesture {
    NSLog(@"=== annotation clicked");

    MAAnnotationView *annoView = (MAAnnotationView*) gesture.view;
    
    UIAlertView *alert = [[UIAlertView alloc] initWithTitle:@"alert" message:[NSString stringWithFormat:@"onClick-%@", annoView.annotation.title] delegate:nil cancelButtonTitle:@"cancel" otherButtonTitles:nil, nil];
    
    [alert show];
    
    if(annoView.annotation == self.mapView.selectedAnnotations.firstObject) {
        if(annoView.selected == NO) { // 修复 5.0.0上annotation选中后重用的bug。
            [annoView setSelected:YES animated:YES];
...
