//
//  iOS_annotation_clickUITests.m
//  iOS-annotation-clickUITests
//
//  Created by hanxiaoming on 2017/4/10.
//  Copyright © 2017年 autonavi. All rights reserved.
//

#import <XCTest/XCTest.h>

@interface iOS_annotation_clickUITests : XCTestCase

@end

@implementation iOS_annotation_clickUITests

- (void)setUp {
    [super setUp];
    
    // Put setup code here. This method is called before the invocation of each test method in the class.
    
    // In UI tests it is usually best to stop immediately when a failure occurs.
    self.continueAfterFailure = NO;
    // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
    [[[XCUIApplication alloc] init] launch];
    
    // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
}

- (void)tearDown {
    // Put teardown code here. This method is called after the invocation of each test method in the class.
    [super tearDown];
}

- (void)testExample {
    // Use recording to get started writing UI tests.
    // Use XCTAssert and related functions to verify your tests produce the correct results.
    
    
    XCUIApplication *app = [[XCUIApplication alloc] init];
    
    XCUIElement *maannotationcontainerElement = app.otherElements[@"maannotationcontainer"];
    XCUIElementQuery *annotationsQuery = [maannotationcontainerElement.otherElements matchingIdentifier:@"maannotationview"];
    
    XCTAssert(annotationsQuery.count == 9);
    
    XCUIElement *annotaitonView1 = [annotationsQuery elementBoundByIndex:1];
    [annotaitonView1 tap];
    
    
    [self checkAlertWithText:@"onClick-anno:3" app:app success:^{
        
    } failure:^{
        XCTAssertFalse(@"annotation 1 click failed");
    }];
    
    
    sleep(2);
    XCUIElement *annotaitonView4 = [annotationsQuery elementBoundByIndex:4];
    [annotaitonView4 tap];
    
    [self checkAlertWithText:@"onClick-anno:0" app:app success:^{
        
    } failure:^{
        XCTAssertFalse(@"annotation 4 click failed");
    }];
    
    [annotaitonView4 tap];
    
    [self checkAlertWithText:@"onClick-anno:0" app:app success:^{
        
    } failure:^{
        XCTAssertFalse(@"annotation 4 click failed");
    }];

    
    sleep(2);
}

- (void)checkAlertWithText:(nonnull NSString *)text app:(nonnull XCUIApplication *)app success:(nonnull void(^)())success failure:(nonnull void(^)())failure
{
    
    XCUIElement *alert = app.alerts[@"alert"];
    
    NSPredicate *exists = [NSPredicate predicateWithFormat:@"exists == YES"];
    
    [self expectationForPredicate:exists evaluatedWithObject:alert handler:nil];
    
    [self waitForExpectationsWithTimeout:5 handler:^(NSError * _Nullable error) {
        NSLog(@"error :%@",error);
        
    }];
    
    BOOL result = YES;
    
    if (text != nil)
    {
        result = [alert.staticTexts[text] exists];
    }
    
    [alert.buttons[@"cancel"] tap];
    
    if (result)
    {
        success();
    }
    else
    {
        failure();
    }
}


@end
